# multistate-Hopfield-network

./: .gitignore  Energy.py  MHN.py  README.md  bokeh_plot.py  hydra_test.py  main.py  marimo.py  modern_hopfield_network.py  mpmhn_plot.py  multiPatternMHN.py  multi_pattern_mhn.py  multirun.py  note.ipynb  plot.py  plot_particle_images.py  pyproject.toml  toy.html  toy.py
__marimo__/session/: marimo.py.json  plot.py.json  test.py.json
calc/mpmhn/: __init__.py  energy.py  interaction.py  stimulation.py
config/: config.yaml  mpmhn.yaml  test.yaml
mhn/: __init__.py  cifar100.py  modern_hopfield_network.py
mpmhn/: __init__.py  energy.py  interaction.py  plot_particle_images.py
mpmhn/cfg/: config.yaml
output/2025-08-10/07-54-13/.hydra/: config.yaml  hydra.yaml
plot/: __init__.py  entropy.py  evaluation.py  images.py  loader.py  pca.py  similarity.py  temporal.py  tsne.py  utils.py
plot/multi_run/: plot.py
plot/plot2d/: __init__.py  plot.py
plot2d/: plot.py
resource/: cifar100.py
