[project]
name = "multistatehnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.3",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
